[package]
name = "gst"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gstreamer = "0.24"
gstreamer-webrtc = "0.24"
gstreamer-sdp = "0.24"
gstreamer-video = "0.24"
anyhow = "1.0"